[package]
name        = "spark-address"
version     = "0.1.0"
edition     = "2021"
license     = "MIT OR Apache-2.0"
# New metadata for crates.io
description = "Minimal, no_std-compatible Bech32m encoder/decoder for Spark addresses"
readme      = "README.md"
homepage    = "https://github.com/ethanmarcuss/spark-address"
repository  = "https://github.com/ethanmarcuss/spark-address"
keywords    = ["spark", "bech32m", "cryptography", "address", "no-std"]
categories  = ["cryptography", "encoding"]
rust-version = "1.70"

publish = ["crates-io"]


[dependencies]
bech32 = { version = "0.11.0", default-features = false, features = ["alloc"] }
hex = "0.4.3"


# Optional secp256k1 pub-key validation (feature-gated):
secp256k1 = { version = "0.31.0", optional = true }

[features]
default = ["std"]
std = []
validate-secp256k1 = ["secp256k1"]

[dev-dependencies]
proptest = "1.4"
rand = "0.9.1"
